# agent-control-examples-defenseclaw

./: .gitignore  README.md
agentcontrol-raw-demo/: .gitignore  CONTROL_RECIPES.md  README.md  app.py  demo_agent.py  pyproject.toml  register_agent.py
defenseclaw/: README.md  claude_hook.py  defenseclaw_gateway.py  defenseclaw_runtime.py  demo_config.py  galileo_hook_trace.py  launch_claude.py  policy_models.py  pyproject.toml  run_no_network_boto3_demo.py  setup_controls.py  verify_demo.py
defenseclaw-enforcer-no-sdk/: .env.example  .gitignore  README.md  agent_control_client.py  control_catalog.py  defenseclaw_runtime_config.py  demo_config.py  launch_claude.py  manage_controls.py  policy_translator.py  pyproject.toml  setup_controls.py  sync_controls.py  verify_setup.py
defenseclaw-enforcer-no-sdk/demo_bin/: curl  rm
defenseclaw-enforcer-no-sdk/tests/: test_enforcer_demo.py
defenseclaw-no-sdk/: .gitignore  README.md  agent_control_http.py  claude_hook.py  control_definitions.py  defenseclaw_gateway.py  demo_config.py  galileo_trace.py  launch_claude.py  policy_models.py  policy_runtime.py  pyproject.toml  run_no_network_boto3_demo.py  setup_controls.py  verify_setup.py
defenseclaw-no-sdk/defenseclaw_rule_pack/rules/: demo-destructive-operations.yaml
defenseclaw-no-sdk/demo_bin/: curl
defenseclaw-no-sdk/demo_sandbox/: __init__.py  no_network_s3.py
defenseclaw-no-sdk/tests/: test_no_sdk_demo.py
defenseclaw/.claude/: settings.json
defenseclaw/demo-workspace/retired-build-cache/: README.txt
defenseclaw/demo_bin/: aws  rm  terraform
defenseclaw/demo_sandbox/: no_network_s3.py
defenseclaw/terraform-demo/: README.md  main.tf
defenseclaw/tests/: test_sdk_demo.py
