[project]
name = "defenseclaw-enforcer-no-sdk-demo"
version = "0.1.0"
description = "Agent Control-managed policies enforced by DefenseClaw without the SDK"
requires-python = ">=3.12"
dependencies = [
    "defenseclaw @ git+https://github.com/cisco-ai-defense/defenseclaw.git@0.8.3",
    "httpx>=0.26,<1",
    "PyYAML>=6.0,<7",
    "ruamel-yaml>=0.18,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

