[project]
name = "defenseclaw-agent-control-no-sdk-demo"
version = "0.1.0"
description = "DefenseClaw plus server-only Agent Control enforcement over direct HTTP"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34,<2",
    "defenseclaw @ git+https://github.com/cisco-ai-defense/defenseclaw.git@0.8.3",
    "galileo>=2.4.0,<3",
    "httpx>=0.26,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
