[project]
name = "defenseclaw-agent-control-sdk-demo"
version = "0.1.0"
description = "DefenseClaw hybrid policy enforcement using the Agent Control SDK"
requires-python = ">=3.12"
dependencies = [
    "agent-control-sdk>=8.2.0,<9",
    "boto3>=1.34,<2",
    "defenseclaw @ git+https://github.com/cisco-ai-defense/defenseclaw.git@0.8.3",
    "galileo>=2.4.0,<3",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
